<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/schedules_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lessons_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/inset"
            android:text="@string/title_lessons_schedule"
            android:textColor="#fff" />

        <Button
            android:id="@+id/calls_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/inset"
            android:text="@string/title_school_schedule"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:id="@+id/now_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="130dp"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/title_nolesson" />

    <TextView
        android:id="@+id/teacher_name"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:gravity="center"
        android:text="" />

    <TextView
        android:id="@+id/cabinet_num"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="15sp"
        android:gravity="center"
        android:text="" />
    <TextView
        android:id="@+id/next"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="15sp"
        android:gravity="center"
        android:text="" />



</LinearLayout>
